fix javadoc release