@@ -259,9 +259,13 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.0</version>
             <configuration>
               <additionalparam>-Xdoclint:none</additionalparam>
+              <additionalJOption>--add-exports</additionalJOption>
+              <additionalJOption>
+                java.base/jdk.internal.loader=ALL-UNNAMED
+              </additionalJOption>
             </configuration>
             <executions>
               <execution>
